--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.43.1",
+    "nanoid": "^5.1.5",
     "postgres": "^3.4.5",
     "zod": "^3.24.4"
   }
